아이템 middle 스타일 수정

--- a/traveller/src/main/webapp/css/orderTable.css
+++ b/traveller/src/main/webapp/css/orderTable.css
@@ -1011,5 +1011,14 @@ body{
 }
 
 
+.item-card {
+	justify-content: center;
+}
+.card-title {
+	font-weight: bold;
+}
+.card{
+	width:30rem;
+	text-align: center;
 
-
+}
